# generative-ai

Journey/: idiom_20260222.ipynb  jeff_su_20260220.ipynb  journey_llm_20260220.ipynb  main.py  pyproject.toml  yt_video_fathers_day_20260222.ipynb
Journey/docs/youtube/: NMAcu-WS9nE.m4a  transcript.txt
ProductExtraction/: main.py  makuake_top10.py  pyproject.toml
ProductExtraction/makuake_out/: makuake_top10.json
deeplearning_ai/DAI/: pyproject.toml
deeplearning_ai/DAI/L11/: L11.ipynb
deeplearning_ai/DAI/L11/ade_outputs/: apple_10k.json  apple_10k.md  apple_10k_chunks.json
deeplearning_ai/DAI/L4/: L4.ipynb.~1~
deeplearning_ai/DAI/L6/: L6.ipynb
deeplearning_ai/DAI/L9/: L9.ipynb
deeplearning_ai/GoogleJAX/: pyproject.toml
deeplearning_ai/GoogleJAX/L2/: L2.ipynb
deeplearning_ai/GoogleJAX/L3/: L3.ipynb
deeplearning_ai/GoogleJAX/L4/: L4.ipynb  TinyStories-1000.txt
deeplearning_ai/GoogleJAX/L4/small_checkpoint.orbax/: _CHECKPOINT_METADATA  _METADATA  _sharding  manifest.ocdbt
deeplearning_ai/GoogleJAX/L5/: L5.ipynb
deeplearning_ai/NAT/L3/simple_tool_demo/: pyproject.toml
deeplearning_ai/SGLang/: pyproject.toml  requirements.txt
deeplearning_ai/SGLang/L2/: L2.ipynb  tiny_llm.py
deeplearning_ai/SGLang/L3/: L3.ipynb  helper.py
deeplearning_ai/SGLang/L4/: L4_cpu.ipynb
deeplearning_ai/a2a_walkthrough/: 1_BasicQA.ipynb  2_A2AServer-PolicyAgent.ipynb  3_A2AClient.ipynb  4_ADKA2A-ResearchAgent.ipynb  5_ADKSequentialAgent.ipynb  6_A2AxMCPLangGraph.ipynb  7_A2AMicrosoftClient.ipynb  8_BeeAIRequirement.ipynb  README.md  a2a_healthcare_agent.py  a2a_healthcare_client.py  a2a_policy_agent.py  a2a_provider_agent.py  a2a_research_agent.py  helpers.py  mcpserver.py  policy_agent.py  pyproject.toml
deeplearning_ai/acp/my_acp_project/: crew_agent_server.py  main.py  mcpserver.py  my_smolagents_server.py  pyproject.toml  smolagents_server.py  test_crew_server.py  test_mcpserver.py  test_smolagents_server.py
deeplearning_ai/agentic_document_workflow/: main.py  pyproject.toml
deeplearning_ai/agentic_document_workflow/L2/: L2.ipynb
deeplearning_ai/agentic_document_workflow/L2/workflows/: concurrent_different_events.html  custom_events.html  loop_events.html
deeplearning_ai/agentic_document_workflow/L3/: L3.ipynb
deeplearning_ai/agentic_document_workflow/L3/storage/: default__vector_store.json  docstore.json  index_store.json
deeplearning_ai/agentic_document_workflow/L3/workflows/: rag_workflow.html  readme.md
deeplearning_ai/agentic_document_workflow/L4/: L4.ipynb  helper.py  requirements.txt
deeplearning_ai/agentic_document_workflow/L4/storage/: default__vector_store.json  docstore.json  index_store.json
deeplearning_ai/agentic_document_workflow/L5/: L5.ipynb
deeplearning_ai/agentic_document_workflow/L6/: L6.ipynb
deeplearning_ai/agentic_document_workflow/L6/storage/: default__vector_store.json  docstore.json  index_store.json
deeplearning_ai/cache/: main.py  pyproject.toml
deeplearning_ai/cache/L2/: L2.ipynb
deeplearning_ai/cache/L2/cache/: config.py  evals.py  vis.py  vis.py.~1~  wrapper.py
deeplearning_ai/cache/L3/: L3.ipynb
deeplearning_ai/cache/L3/cache/: cross_encoder.py  faq_data_container.py  fuzzy_cache.py  llm_evaluator.py
deeplearning_ai/cache/L4/: L4.ipynb
deeplearning_ai/cache/L4/cache/: model_costs.json  vis.py
deeplearning_ai/cache/L5/: L5.ipynb  requirements.txt
deeplearning_ai/cache/L5/agent/: __init__.py  demo.py  demo.py.~1~  edges.py  knowledge_base_utils.py  knowledge_base_utils.py.~1~  nodes.py  nodes.py.~1~  tools.py
deeplearning_ai/cache/L5/cache/: vis.py.~1~
deeplearning_ai/cache/L5/data/: test_dataset.csv
deeplearning_ai/coding/: main.py  pyproject.toml  requirements.txt
deeplearning_ai/coding/L2/: L2.ipynb  demos.py  llm.py  sbx.cache  secret.txt
deeplearning_ai/coding/L2/lib/: __init__.py  logger.py  prompts.py  sbx_tools.py  utils.py
deeplearning_ai/coding/L4/: L4.ipynb  index.html  sbx.cache
deeplearning_ai/coding/L4/lib/: coding_agent.py  tools.py
deeplearning_ai/coding/L5/: L5.ipynb  sbx.cache  unknown.csv
deeplearning_ai/coding/L5/lib/: ui.py
deeplearning_ai/coding/L6/: L6.ipynb  sbx.cache
deeplearning_ai/coding/project/: docs.md  project.ipynb  requirements.txt
deeplearning_ai/genai_gradio/: L1_NLP_tasks_with_a_simple_interface.ipynb  L2_Image_captioning_app.ipynb  L3_Image_generation_app.ipynb  L4_Describe_and_generate_game.ipynb  L5_Chat_with_any_LLM.ipynb  falcon_local_api.py  main.py  pyproject.toml  test_chatbat.py
deeplearning_ai/jupyter_ai/: main.py  pyproject.toml
deeplearning_ai/jupyter_ai/L1/: L1 - Coding with Jupyter AI.ipynb  customer_reviews.md
deeplearning_ai/jupyter_ai/L2/: L2 - Book Research Assistant.ipynb  openlibrary_api_docs.md
deeplearning_ai/jupyter_ai/L3/: L3 - Exploring Stock Data.ipynb  test.chat  yfinance_docs.md
deeplearning_ai/post_training/: main.py  pyproject.toml  requirements.txt
deeplearning_ai/post_training/L3/: Lesson_3.ipynb
deeplearning_ai/post_training/L5/: Lesson_5.ipynb
deeplearning_ai/post_training/L7/: Lesson_7.ipynb  helper.py  requirements.txt
deeplearning_ai/pydantic_model/: main.py  pyproject.toml
deeplearning_ai/pydantic_model/L2/: lesson_2.ipynb
deeplearning_ai/pydantic_model/L3/: lesson_3.ipynb  requirements.txt
deeplearning_ai/pydantic_model/L4/: lesson_4.ipynb  lesson_4_ollama.ipynb
deeplearning_ai/pydantic_model/L5/: lesson_5.ipynb  requirements.txt
ltc/: grouping_result.txt  ltc_pdfs_local_20250717.ipynb  ltc_rag_agent_openai.ipynb  processed_history.txt  pyproject.toml  total_text.txt  utils.py
ltc/classified_articles/: Assessment and Evaluation in Long-Term Care.txt  Environmental and Agricultural Issues.txt  Family Caregiver Support.txt  Health and Safety Regulations.txt  Long-Term Care Policies and Programs.txt  Professional Training and Development.txt  Remote Work and Workplace Dynamics.txt  Short Summaries or Incomplete Articles.txt  Technology in Caregiving.txt
ltc2/: ltc_acp_server.py  ollama_smolagents_server.py  pyproject.toml  run_ltc_acp_client.ipynb  run_smolagents_client.ipynb
(+379 files in other folders)
