[project]
name = "productextraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "deep-translator>=1.11.4",
    "lxml>=6.0.2",
    "pandas>=2.3.2",
    "playwright>=1.55.0",
    "requests>=2.32.5",
]
