[project]
name = "ltc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.148.0",
    "dotenv>=0.9.9",
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.4",
    "langchain-community>=0.3.27",
    "langchain-ollama>=0.3.5",
    "openai>=1.97.0",
    "pypdf>=5.8.0",
    "together>=1.5.21",
    "transformers>=4.53.2",
]
