[project]
name = "ltc2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "acp-sdk>=1.0.1",
    "colorama>=0.4.6",
    "crewai>=0.150.0",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.11.0.post1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.28",
    "pypdf>=5.9.0",
    "requests>=2.32.4",
    "smolagents>=1.20.0",
]
