[project]
name = "googlejax"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "flax==0.10.7",
    "gradio==6.5.1",
    "grain==0.2.13",
    "ipywidgets==8.1.8",
    "jax==0.6.2",
    "jupyter==1.1.1",
    "matplotlib==3.10.8",
    "tiktoken==0.4.0",
    "typing-extensions==4.15.0",
]
