[project]
name = "agenticdocumentworkflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "graphviz>=0.21",
    "llama-index>=0.12.52",
    "llama-index-utils-workflow>=0.3.5",
    "llama-parse>=0.6.54",
    "pandas>=2.3.2",
]
