[project]
name = "cache"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fuzzywuzzy>=0.18.0",
    "gradio>=6.0.1",
    "ipywidgets>=8.1.8",
    "jarowinkler>=2.0.1",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langchain-openai>=1.1.0",
    "langchain-text-splitters>=1.0.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "panel>=1.8.3",
    "rapidfuzz>=3.14.3",
    "redis>=5.0,<7.0",
    "redisvl>=0.10.0,<0.13.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "tavily>=1.1.0",
]

