[project]
name = "coding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "e2b-code-interpreter>=2.4.1",
    "gradio-aicontext>=0.0.6",
    "gradio-browser>=0.0.3",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "tiktoken>=0.12.0",
]
