[project]
name = "genaigradio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.46.1",
    "ipywidgets>=8.1.7",
    "jupyterlab-widgets>=3.0.15",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "requests>=2.32.5",
]
