[project]
name = "jupyterai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "aisuite>=0.1.13",
    "jupyter-ai==3.0.0b7",
    "jupyter-ai-magics==3.0.0b7",
    "jupyterlab>=4.4.10",
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.3,<1.0",
    "litellm>=1.80.5",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "yfinance>=0.2.66",
]
