[project]
name = "posttraining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets==3.6.0",
    "huggingface-hub==0.33.0",
    "ipykernel>=6.29.5",
    "jinja2==3.1.2",
    "jupyterlab>=4.4.4",
    "markupsafe==2.0.1",
    "numpy==1.26.4",
    "pandas==2.3.0",
    "tabulate==0.9.0",
    "torch==2.5.0",
    "transformers==4.53.0",
    "trl==0.14.0",
]
