[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_tool_demo"
version = "0.1.0"
dependencies = [
    "nvidia-nat~=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

# This tells NAT where to find our tool registration
[project.entry-points.'nat.components']
simple_tool_demo = "simple_tool_demo.register"
